--- a/perfil1.html
+++ b/perfil1.html
@@ -43,7 +43,7 @@
                                 <h5 class="boton1"><a href="solicitud_mantencion.html">Enviar solicitud mantención</a></h5>
                             </li>
                             <li class="list-inline-item" id="li">
-                                <h5 class="boton1"><a href="otra_pagina.html">Enviar solicitud vehiculo</a></h5>
+                                <h5 class="boton1"><a href="solicitudvehiculo.html">Enviar solicitud vehiculo</a></h5>
                             </li>
                             <li class="list-inline-item" id="li">
                                 <h5 class="boton1"><a href="otra_pagina.html">Solicitudes en curso</a></h5>
