2 opcion para perfil

--- a/perfil1.html
+++ b/perfil1.html
@@ -31,6 +31,7 @@
                         
                         </div>
                     </div>
+                    <div>
                     <div class="bg-light p-4 d-flex justify-content-end text-center">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item" id="li">
@@ -73,6 +74,7 @@
         </div>
         
         <footer>
+            <br>
             <div class="boton">
                 <a href="" class="btn btn-dark btn-lg enabled" tabindex="-1" role="button"
                         aria-disabled="true">
