--- a/perfil2.html
+++ b/perfil2.html
@@ -26,7 +26,8 @@
                         <div class="card-body">
                             <br>
                             <br>
-                            <img src="/img/admin.png"  class="rounded-circle" width="150">
+                            <img src="/img/admin.png"  class="rounded-circle" width="150">´
+                            <br>
                             <div class="mt-3">
                                 <h3>Christian Guerrero</h3>
                                 <a href="">Inicio</a>
